fixing strething bug on iphones

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,6 @@
 .image {
   width: 275px;
+  height: 275px;
 }
 
 .imagecontainer {
